test/invalid/baseline/iterator.txt
Syntax error at line 5 in iterator.webidl, since `interface SessionManager`:
  Session iterator;
                  ^ Invalid operation
